@@ -1,6 +1,7 @@
 ﻿$Rev: 2129 $
 [2007/08/08]
                     Fix document NewEdit->UliPad
+mFormat.py          Add Tab and Shift+Tab to menu item
                     
 [2007/08/07]
 mRecentFile.py      增加Alt+R给最近打开文件菜单
